tests/array_slice_failure/error.txt
Validation error: ./tests/array_slice_failure/array_slice_failure.fae, line 12: Expected argument of type `[]mut i32`, got `[]i32`
  12|     func(array)
               ^^^^^

Validation error: ./tests/array_slice_failure/array_slice_failure.fae, line 13: Cannot assign to index of immutable slice
  13|     array[1] = 3
          ^^^^^^^^^^^^

Validation error: ./tests/array_slice_failure/array_slice_failure.fae, line 14: Cannot assign to index of immutable slice
  14|     array[0] = 4
          ^^^^^^^^^^^^

Validation error: ./tests/array_slice_failure/array_slice_failure.fae, line 15: Expected argument of type `[]mut i32`, got `[]i32`
  15|     func(array)
               ^^^^^
